--- a/server/testing/pom.xml
+++ b/server/testing/pom.xml
@@ -24,7 +24,7 @@
         <groupId>org.apache.james</groupId>
         <artifactId>james-server</artifactId>
         <version>3.5.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>james-server-testing</artifactId>
