--- a/testing/base/pom.xml
+++ b/testing/base/pom.xml
@@ -22,6 +22,7 @@
         <artifactId>james-project</artifactId>
         <groupId>org.apache.james</groupId>
         <version>3.5.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
