--- a/server/pom.xml
+++ b/server/pom.xml
@@ -104,6 +104,7 @@
         <module>queue/queue-jms</module>
         <module>queue/queue-memory</module>
         <module>queue/queue-rabbitmq</module>
+        <module>queue/queue-reactive-activemq</module>
 
         <module>task/task-api</module>
         <module>task/task-distributed</module>
