--- a/server/queue/queue-reactive-activemq/pom.xml
+++ b/server/queue/queue-reactive-activemq/pom.xml
@@ -55,6 +55,11 @@
         </dependency>
         <dependency>
             <groupId>${james.groupId}</groupId>
+            <artifactId>blob-memory</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${james.groupId}</groupId>
             <artifactId>james-server-queue-api</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
