--- a/protocols/imap/pom.xml
+++ b/protocols/imap/pom.xml
@@ -103,6 +103,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
+        </dependency>
     </dependencies>
 
 
