--- a/server/queue/queue-reactive-activemq/pom.xml
+++ b/server/queue/queue-reactive-activemq/pom.xml
@@ -85,7 +85,17 @@
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-stream_2.13</artifactId>
+            <artifactId>akka-stream_${scala.base}</artifactId>
+            <version>2.6.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-stream-typed_${scala.base}</artifactId>
+            <version>2.6.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor-typed_${scala.base}</artifactId>
             <version>2.6.5</version>
         </dependency>
         <dependency>
