Design proposal regarding how we handle Server instantiation
  The design is the following:

  * Each Server define a Builder, there's no longer the need to figure out
    what are the requirement for a given Server as the builder is fluent enough

  * Each Server guice maven module defines an junit Extension to easily build a Server for
    testing. This extension relies on Server.Builder to retrieve configuration from caller
    and provide a phase to customize the Server definition using JamesServerBuilder

  * JamesServerBuilder still allows easy customization of the Server in the junit context
    for example by passing an Extension object

  As there's a lot of these Extensions invocationsm every refactoring costs a lot.
  By relying on Server.Builder, adding a configuration parameter should allow to
  only change these calls but no other abstraction.

--- a/server/protocols/jmap-rfc-8621-integration-tests/memory-jmap-rfc-8621-integration-tests/pom.xml
+++ b/server/protocols/jmap-rfc-8621-integration-tests/memory-jmap-rfc-8621-integration-tests/pom.xml
@@ -51,6 +51,12 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>james-server-memory-guice</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>jmap-rfc-8621-integration-tests-common</artifactId>
             <scope>test</scope>
         </dependency>
