JAMES-3397 upgrade git-commit-id-maven plugin and make it not to use native git as it doesn't work in travis and is also not recommended: https://github.com/git-commit-id/git-commit-id-maven-plugin/issues/223#issuecomment-156146883

--- a/pom.xml
+++ b/pom.xml
@@ -3192,7 +3192,7 @@
                 <plugin>
                     <groupId>pl.project13.maven</groupId>
                     <artifactId>git-commit-id-plugin</artifactId>
-                    <version>3.0.1</version>
+                    <version>4.0.2</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -3330,7 +3330,7 @@
                         <includeOnlyProperty>git.dirty</includeOnlyProperty>
                     </includeOnlyProperties>
                     <skip>false</skip>
-                    <useNativeGit>true</useNativeGit>
+                    <useNativeGit>false</useNativeGit>
                     <failOnNoGitDirectory>false</failOnNoGitDirectory>
                     <gitDescribe>
                         <skip>false</skip>
